Adicionando lista e marcadores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <h1>Harley Davidson</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus unde voluptatum repellat debitis, quo et ea expedita distinctio ad explicabo mollitia, doloremque, autem corporis libero vitae temporibus officiis ut odit.</p>
+    <ul>
+        <li>Catálogo</li>
+        <li>Contato</li>
+        <li>Sobre nós</li>
+    </ul>
+    <h3>A moto perfeita para você!</h3>
+    <p>Lorem ipsum dolor sit amet <mark>adipisicing elit</mark>. Ducimus unde voluptatum repellat debitis, quo et ea expedita distinctio ad explicabo mollitia, doloremque, autem corporis libero vitae temporibus officiis ut odit.</p>
     <img src="assets/moto3.png" alt="moto">
 
 
