Adicionado vídeos locais e de links externo e css interno

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harley Davidson</title>
     <link rel="icon" href="./assets/logomoto.png">
+
+    <style>
+        li {
+            padding: 10px;
+            list-style: none;
+        }
+        h1 {
+            background-color: bisque;
+        }
+
+    </style>
+
 </head>
 <body>
     <h1>Harley Davidson</h1>
@@ -17,7 +29,14 @@
     </ul>
     <h3>A moto perfeita para você!</h3>
     <p>Lorem ipsum dolor sit amet <mark>adipisicing elit</mark>. Ducimus unde voluptatum repellat debitis, quo et ea expedita distinctio ad explicabo mollitia, doloremque, autem corporis libero vitae temporibus officiis ut odit.</p>
-    <img src="assets/moto3.png" alt="moto">
+    
+    <img width="350" src="assets/moto3.png" alt="moto">
+
+    <video width="300" controls>
+        <source src="./assets/Iron883_sound.mp4" type="video/mp4">
+    </video>
+
+    <iframe width="300" height="315" src="https://www.youtube.com/embed/q9ZkeIrYdEc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 </body>
