--- a/index.html
+++ b/index.html
@@ -6,37 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harley Davidson</title>
     <link rel="icon" href="./assets/logomoto.png">
-
-    <style>
-        li {
-            padding: 10px;
-            list-style: none;
-        }
-        h1 {
-            background-color: bisque;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
-    <h1>Harley Davidson</h1>
-    <hr>
-    <ul>
-        <li>Catálogo</li>
-        <li>Contato</li>
-        <li>Sobre nós</li>
-    </ul>
-    <h3>A moto perfeita para você!</h3>
-    <p>Lorem ipsum dolor sit amet <mark>adipisicing elit</mark>. Ducimus unde voluptatum repellat debitis, quo et ea expedita distinctio ad explicabo mollitia, doloremque, autem corporis libero vitae temporibus officiis ut odit.</p>
-    
-    <img width="350" src="assets/moto3.png" alt="moto">
-
-    <video width="300" controls>
-        <source src="./assets/Iron883_sound.mp4" type="video/mp4">
-    </video>
-
-    <iframe width="300" height="315" src="https://www.youtube.com/embed/q9ZkeIrYdEc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <header>
+        <div class="content">
+            <nav>
+                <p class="marca">leo<strong>dev</strong></p>
+                <ul>
+                    <li><a href="#catalogo">Catálogo</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#info">Info</a></li>
+                    <a href="login.html">
+                        <button>Login</button>
+                    </a>
+                </ul>
+            </nav>
+            <div class="header-block">
+                <div class="text">
+                    <h2>A moto perfeita pra você!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="assets/logomoto.png"/>
+            </div>
+        </div>
+    </header>     
 
 
 </body>
